@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-06-30T08:20:36Z",
   "count" : 1,
-  "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -1, +2 ],
+  "count_minmax" : [ 1, 1 ],
+  "count_decinc" : [ -0, +1 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
