@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-30T01:21:13Z",
+  "timestamp" : "2022-06-30T08:20:36Z",
   "count_outdated" : 363,
   "uniques_outdated" : 208,
   "count" : 387,
-  "uniques" : 223,
+  "uniques" : 224,
   "clones" : [
     {
       "timestamp": "2022-06-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -93,6 +93,13 @@
       "timestamp": "2022-06-29T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
